--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
     width: 100% ;
     min-height: 100vh;
-    background-color: rgb(243,243,243);
+    background-color: rgb(255, 255, 255);
     margin: 0;
     padding: 0;
     display: flex;
